--- a/api/getting-started.mdx
+++ b/api/getting-started.mdx
@@ -8,7 +8,7 @@ description: "Get started with the Marble API."
 Make your first API request in seconds! Copy and paste this command into your terminal:
 
 ```bash
-curl -H "Authorization: Bearer YOUR_API_KEY" https://api.marblecms.com/v1/posts
+curl -H "Authorization: YOUR_API_KEY" https://api.marblecms.com/v1/posts
 ```
 
 <Tip>Replace `YOUR_API_KEY` with an API key from your Marble dashboard.</Tip>
@@ -46,7 +46,7 @@ Include your API key in the `Authorization` header:
 <Tabs>
 <Tab title="cURL">
 ```bash
-curl -H "Authorization: Bearer YOUR_API_KEY" https://api.marblecms.com/v1/posts
+curl -H "Authorization: YOUR_API_KEY" https://api.marblecms.com/v1/posts
 ```
 </Tab>
 
@@ -54,7 +54,7 @@ curl -H "Authorization: Bearer YOUR_API_KEY" https://api.marblecms.com/v1/posts
 ```javascript
 const response = await fetch("https://api.marblecms.com/v1/posts", {
   headers: {
-    Authorization: "Bearer YOUR_API_KEY",
+    Authorization: "YOUR_API_KEY",
   },
 });
 const data = await response.json();
