--- a/api/types.mdx
+++ b/api/types.mdx
@@ -3,14 +3,39 @@ title: "TypeScript Types"
 description: "TypeScript type definitions for Marble API responses."
 ---
 
-This page provides TypeScript type definitions for all Marble API responses. These types can be used to ensure type safety when integrating Marble with TypeScript projects.
+<Tip>
+  **We recommend using the [TypeScript SDK](/guides/sdk)** for the best
+  developer experience. The SDK is fully type-safe and exports all up-to-date
+  types automatically.
+</Tip>
 
-<Note>
-All types are based on the actual API responses and are kept up-to-date with the latest API version.
-</Note>
+If you're using `fetch` directly and need type definitions, you can import them from the SDK or copy the definitions below.
 
+## Importing from the SDK
+
+The `@usemarble/sdk` package exports all TypeScript types:
+
+<CodeGroup>
+  ```bash npm npm install @usemarble/sdk ``` ```bash pnpm pnpm add
+  @usemarble/sdk ``` ```bash yarn yarn add @usemarble/sdk ``` ```bash bun bun
+  add @usemarble/sdk ```
+</CodeGroup>
+
+```typescript
+import type { Post, Category, Tag, Author, Pagination } from "@usemarble/sdk";
+
+// Use with fetch
+const response = await fetch("https://api.marblecms.com/v1/posts", {
+  headers: { Authorization: process.env.MARBLE_API_KEY },
+});
+const data: { posts: Post[]; pagination: Pagination } = await response.json();
+```
+
+---
 
 ## Type Definitions
+
+If you prefer to copy the types directly into your project, here are the complete type definitions:
 
 ```typescript
 export type Post = {
@@ -103,17 +128,17 @@ export type Social = {
 };
 
 export type SocialPlatform =
-| "x"
-| "github"
-| "facebook"
-| "instagram"
-| "youtube"
-| "tiktok"
-| "linkedin"
-| "website"
-| "onlyfans"
-| "discord"
-| "bluesky";
+  | "x"
+  | "github"
+  | "facebook"
+  | "instagram"
+  | "youtube"
+  | "tiktok"
+  | "linkedin"
+  | "website"
+  | "onlyfans"
+  | "discord"
+  | "bluesky";
 
 export type MarbleAuthorResponse = {
   author: Author;
@@ -126,44 +151,36 @@ export type MarbleAuthorListResponse = {
 ```
 
 <Tip>
-Copy these type definitions into a `types/marble.ts` file in your project. If you prefer a published package, we also provide an official npm package that exports these types .
+  Copy these type definitions into a `types/marble.ts` file in your project. If
+  you prefer a published package, use the official SDK that exports these types.
 </Tip>
 
 ### NPM package
 
-We published an official npm package, `@usemarble/core`, that exports the TypeScript types and zod schemas shown on this page. Installing the package avoids copying the type definitions into multiple projects.
+The official `@usemarble/sdk` package exports all TypeScript types shown on this page. Installing the package avoids copying the type definitions into multiple projects.
 
 To install the package run:
 
 <CodeGroup>
-```bash npm
-npm install @usemarble/core
-```
-```bash yarn
-yarn add @usemarble/core
-```
-```bash pnpm
-pnpm add @usemarble/core
-```
-```bash bun
-bun add @usemarble/core
-```
+  ```bash npm npm install @usemarble/sdk ``` ```bash yarn yarn add
+  @usemarble/sdk ``` ```bash pnpm pnpm add @usemarble/sdk ``` ```bash bun bun
+  add @usemarble/sdk ```
 </CodeGroup>
 
 You can import the types like this:
 
 ```ts
-import { MarblePost } from "@usemarble/core"
+import type { Post, Category, Tag, Author } from "@usemarble/sdk";
 ```
 
-The package will be kept up-to-date with the API types and provides a reliable implementation of the webhook signature verification used in our examples.
+The package will be kept up-to-date with the API types.
 
 ### Zod Schemas
 
 For runtime validation, you can also create Zod schemas for your data:
 
 ```typescript
-import { z } from 'zod';
+import { z } from "zod";
 
 const PostSchema = z.object({
   id: z.string(),
@@ -175,31 +192,37 @@ const PostSchema = z.object({
   coverImage: z.string().url(),
   publishedAt: z.coerce.date(),
   updatedAt: z.coerce.date(),
-  authors: z.array(z.object({
-    id: z.string(),
-    name: z.string(),
-    slug: z.string(),
-    image: z.string().nullable(),
-    bio: z.string().nullable(),
-    role: z.string().nullable(),
-    socials: z.array(SocialSchema),
-  })),
+  authors: z.array(
+    z.object({
+      id: z.string(),
+      name: z.string(),
+      slug: z.string(),
+      image: z.string().nullable(),
+      bio: z.string().nullable(),
+      role: z.string().nullable(),
+      socials: z.array(SocialSchema),
+    })
+  ),
   category: z.object({
     id: z.string(),
     slug: z.string(),
     name: z.string(),
     description: z.string().nullable(),
   }),
-  tags: z.array(z.object({
-    id: z.string(),
-    slug: z.string(),
-    name: z.string(),
-    description: z.string().nullable(),
-  })),
-  attribution: z.object({
-    author: z.string(),
-    url: z.string().url(),
-  }).nullable(),
+  tags: z.array(
+    z.object({
+      id: z.string(),
+      slug: z.string(),
+      name: z.string(),
+      description: z.string().nullable(),
+    })
+  ),
+  attribution: z
+    .object({
+      author: z.string(),
+      url: z.string().url(),
+    })
+    .nullable(),
 });
 
 const PaginationSchema = z.object({
@@ -218,7 +241,7 @@ export const SocialSchema = z.object({
 
 export const SocialPlatformSchema = z.enum([
   "x",
-  "github", 
+  "github",
   "facebook",
   "instagram",
   "youtube",
@@ -227,6 +250,6 @@ export const SocialPlatformSchema = z.enum([
   "website",
   "onlyfans",
   "discord",
-  "bluesky"
+  "bluesky",
 ]);
 ```
