--- a/guides/integrations/tanstack.mdx
+++ b/guides/integrations/tanstack.mdx
@@ -3,7 +3,7 @@ title: "TanStack Start"
 description: "Integrate Marble in your TanStack Start application"
 ---
 
-Getting your content to your TanStack Start site is as simple as making an API request to the Marble API. This guide will walk you through setting up a blog with Marble and TanStack Start.
+Getting your content to your TanStack Start site is as simple as using the Marble SDK. This guide will walk you through setting up a blog with Marble and TanStack Start.
 
 If you want to get started quickly, you can clone our [TanStack Start blog template](https://github.com/usemarble/tanstack-start-example).
 
@@ -14,8 +14,31 @@ npx create-start-app@latest
 ```
 
 <Steps>
+<Step title="Install the SDK">
+Install the Marble SDK in your TanStack Start project:
+
+<CodeGroup>
+```bash npm
+npm install @usemarble/sdk
+```
+
+```bash pnpm
+pnpm add @usemarble/sdk
+```
+
+```bash yarn
+yarn add @usemarble/sdk
+```
+
+```bash bun
+bun add @usemarble/sdk
+```
+
+</CodeGroup>
+</Step>
+
 <Step title="Set up environment variables">
-First, you'll need to add your Marble API URL and Workspace Key to your environment variables. Create a `.env` file in the root of your TanStack Start project and add the following:
+Add your Marble API key to your environment variables. Create a `.env` file in the root of your TanStack Start project:
 
 ```bash .env
 MARBLE_API_KEY=your_api_key_here
@@ -32,119 +55,39 @@ You can find your API Key in your Marble dashboard under **Settings > API Keys**
 </Tip>
 </Step>
 
-<Step title="Create server functions">
-TanStack Start uses server functions for data fetching. These functions run on the server and can be called from your components. Create a file at `lib/query.ts`:
+<Step title="Create a Marble client">
+Create a shared Marble client instance. Create a file at `lib/marble.ts`:
 
-First, install the required dependencies:
+```typescript lib/marble.ts
+import { Marble } from "@usemarble/sdk";
 
-```bash
-npm install zod
-```
-
-<Note>
-  For complete TypeScript type definitions, see our [TypeScript Types
-  reference](/api/types). The server functions below use these types for full
-  type safety.
-</Note>
-
-```typescript lib/query.ts
-import type {
-  MarbleAuthorListResponse,
-  MarbleCategoryListResponse,
-  MarblePostResponse,
-  MarblePostListResponse,
-  MarbleTagListResponse,
-} from "@/types/marble";
-import { createServerFn } from "@tanstack/react-start";
-import { z } from "zod";
-
-const key = process.env.MARBLE_API_KEY;
-
-export const getPosts = createServerFn().handler(async () => {
-  try {
-    const raw = await fetch("https://api.marblecms.com/v1/posts", {
-      headers: { Authorization: `Bearer ${key}` },
-    });
-    const data: MarblePostListResponse = await raw.json();
-    return data;
-  } catch (error) {
-    console.log(error);
-  }
-});
-
-export const getTags = createServerFn().handler(async () => {
-  try {
-    const raw = await fetch("https://api.marblecms.com/v1/tags", {
-      headers: { Authorization: `Bearer ${key}` },
-    });
-    const data: MarbleTagListResponse = await raw.json();
-    return data;
-  } catch (error) {
-    console.log(error);
-  }
-});
-
-export const getSinglePost = createServerFn()
-  .inputValidator(z.string())
-  .handler(async ({ data: slug }) => {
-    try {
-      const raw = await fetch(`https://api.marblecms.com/v1/posts/${slug}`, {
-        headers: { Authorization: `Bearer ${key}` },
-      });
-      const data: MarblePostResponse = await raw.json();
-      return data;
-    } catch (error) {
-      console.log(error);
-    }
-  });
-
-export const getCategories = createServerFn().handler(async () => {
-  try {
-    const raw = await fetch("https://api.marblecms.com/v1/categories", {
-      headers: { Authorization: `Bearer ${key}` },
-    });
-    const data: MarbleCategoryListResponse = await raw.json();
-    return data;
-  } catch (error) {
-    console.log(error);
-  }
-});
-
-export const getAuthors = createServerFn().handler(async () => {
-  try {
-    const raw = await fetch("https://api.marblecms.com/v1/authors", {
-      headers: { Authorization: `Bearer ${key}` },
-    });
-    const data: MarbleAuthorListResponse = await raw.json();
-    return data;
-  } catch (error) {
-    console.log(error);
-  }
+export const marble = new Marble({
+  apiKey: process.env["MARBLE_API_KEY"] ?? "",
 });
 ```
 
 </Step>
 
 <Step title="Display a list of posts">
-Now you can use the server functions in a TanStack Start route to fetch and display a list of your posts. Create a file at `src/routes/posts/index.tsx`:
+Use the Marble client in a TanStack Start route to fetch and display your posts. Create a file at `src/routes/posts/index.tsx`:
 
 ```tsx src/routes/posts/index.tsx
-import { createFileRoute } from "@tanstack/react-router";
-import { getPosts } from "@/lib/query";
-import { Link } from "@tanstack/react-router";
+import { createFileRoute, Link } from "@tanstack/react-router";
+import { marble } from "@/lib/marble";
 
 export const Route = createFileRoute("/posts/")({
   component: PostsPage,
   loader: async () => {
-    const posts = await getPosts();
-    return posts;
+    const result = await marble.posts.list({ limit: 10 });
+    const data = await result.next();
+    return { posts: data.value?.posts ?? [] };
   },
 });
 
 function PostsPage() {
   const { posts } = Route.useLoaderData();
 
-  if (!posts) return <div>No posts found</div>;
+  if (!posts.length) return <div>No posts found</div>;
 
   return (
     <section>
@@ -166,17 +109,16 @@ function PostsPage() {
 </Step>
 
 <Step title="Display a single post">
-To display a single post, create a dynamic route in TanStack Start. Create a file at `src/routes/posts/$slug.tsx`:
+Create a dynamic route at `src/routes/posts/$slug.tsx` to display individual posts:
 
 ```tsx src/routes/posts/$slug.tsx
 import { createFileRoute } from "@tanstack/react-router";
-import { getSinglePost } from "@/lib/query";
+import { marble } from "@/lib/marble";
 
 export const Route = createFileRoute("/posts/$slug")({
   component: PostPage,
-  loader: async ({ params }: { params: { slug: string } }) => {
-    const data = await getSinglePost({ data: params.slug });
-    return data;
+  loader: async ({ params }) => {
+    return await marble.posts.get({ identifier: params.slug });
   },
 });
 
@@ -266,14 +208,13 @@ Now you can update your post page to use the `Prose` component:
 
 ```tsx src/routes/posts/$slug.tsx
 import { createFileRoute } from "@tanstack/react-router";
-import { getSinglePost } from "@/lib/query";
+import { marble } from "@/lib/marble";
 import { Prose } from "@/components/Prose";
 
 export const Route = createFileRoute("/posts/$slug")({
   component: PostPage,
-  loader: async ({ params }: { params: { slug: string } }) => {
-    const data = await getSinglePost({ data: params.slug });
-    return data;
+  loader: async ({ params }) => {
+    return await marble.posts.get({ identifier: params.slug });
   },
 });
 
@@ -293,7 +234,7 @@ function PostPage() {
 
 This will give your content beautiful, readable typography with proper spacing, font sizes, and styling for headings, links, images, and other elements. You can customize the styles by modifying the classes in the `Prose` component or by extending the typography configuration in your Tailwind config.
 
-For more information about customizing the typography styles, check out [TailWind CSS Typography](https://github.com/tailwindlabs/tailwindcss-typography)!
+For more information about customizing the typography styles, check out [Tailwind CSS Typography](https://github.com/tailwindlabs/tailwindcss-typography)!
 
 </Step>
 </Steps>
