fix broken links

--- a/api/getting-started.mdx
+++ b/api/getting-started.mdx
@@ -74,29 +74,12 @@ curl "https://api.marblecms.com/v1/posts?key=YOUR_API_KEY"
   parameters may appear in server logs.
 </Note>
 
-## Available Endpoints
+## Available Resources
 
-<CardGroup cols={2}>
-<Card title="Posts" icon="file-text" href="/api/endpoint/posts">
-  Retrieve all published posts with filtering and pagination.
-</Card>
-
-<Card title="Single Post" icon="file" href="/api/endpoint/post">
-  Get a specific post by slug or ID.
-</Card>
-
-<Card title="Categories" icon="folder" href="/api/endpoint/categories">
-  List all content categories.
-</Card>
-
-<Card title="Tags" icon="tag" href="/api/endpoint/tags">
-  Browse all content tags.
-</Card>
-
-<Card title="Authors" icon="users" href="/api/endpoint/authors">
-  Get author information.
-</Card>
-</CardGroup>
+- **[Posts](/api-reference/posts/list-posts)**: List, get, create, update, or delete posts
+- **[Authors](/api-reference/authors/list-authors)**: List, get, create, update, or delete authors
+- **[Categories](/api-reference/categories/list-categories)**: List, get, create, update, or delete categories
+- **[Tags](/api-reference/tags/list-tags)**: List, get, create, update, or delete tags
 
 ## Next Steps
 
