--- a/api/pagination.mdx
+++ b/api/pagination.mdx
@@ -236,19 +236,19 @@ for await (const page of result) {
 The following endpoints support pagination:
 
 <CardGroup cols={2}>
-<Card title="Posts" icon="file-text" href="/api/endpoint/posts">
+<Card title="Posts" icon="file-text" href="/api-reference/posts/list-posts">
   Get all published posts with pagination support.
 </Card>
 
-<Card title="Categories" icon="folder" href="/api/endpoint/categories">
+<Card title="Categories" icon="folder" href="/api-reference/categories/list-categories">
   Browse all content categories with pagination.
 </Card>
 
-<Card title="Authors" icon="users" href="/api/endpoint/authors">
+<Card title="Authors" icon="users" href="/api-reference/authors/list-authors">
   List all authors with their associated content.
 </Card>
 
-<Card title="Tags" icon="tag" href="/api/endpoint/tags">
+<Card title="Tags" icon="tag" href="/api-reference/tags/list-tags">
   Retrieve all content tags with pagination.
 </Card>
 </CardGroup>
